[gd_scene load_steps=10 format=2]

[ext_resource path="res://objects/PickableObject.tscn" type="PackedScene" id=1]
[ext_resource path="res://objects/bomb/Bomb.gd" type="Script" id=2]
[ext_resource path="res://objects/bomb/BombFrames.tres" type="SpriteFrames" id=3]
[ext_resource path="res://objects/bomb/PickedBomb.tscn" type="PackedScene" id=4]
[ext_resource path="res://objects/bomb/BombTexture.tres" type="Texture" id=5]
[ext_resource path="res://sfx/bomb_explosion.wav" type="AudioStream" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 5.0

[sub_resource type="CircleShape2D" id=2]
radius = 15.0

[sub_resource type="OccluderPolygon2D" id=3]
polygon = PoolVector2Array( -4.25998, 0.56776, -2.71775, -1.6934, -0.522513, -2.41743, 1.96048, -1.67858, 3.41595, 0.372776, 3.55335, 3.15094, 1.86632, 4.97305, -0.182954, 5.77064, -2.3007, 5.10605, -3.97661, 3.41948 )

[node name="Bomb" instance=ExtResource( 1 )]
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )
picked_item_sceene = ExtResource( 4 )

[node name="Sprite" parent="." index="0"]
visible = false
texture = ExtResource( 5 )

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="2"]
position = Vector2( -0.073101, -1.24266 )
frames = ExtResource( 3 )
animation = "burn"

[node name="ExplosionArea" type="Area2D" parent="." index="3"]
collision_layer = 2
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionArea" index="0"]
shape = SubResource( 2 )

[node name="LightOccluder2D" parent="." index="4"]
position = Vector2( 0.219292, -1.68125 )
occluder = SubResource( 3 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." index="5"]
stream = ExtResource( 6 )
max_distance = 150.0
[connection signal="body_entered" from="." to="." method="_on_Bomb_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
